{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 11,
  "lineage": "05faee1a-5949-75a4-0b44-dc40fc82351d",
  "resources": [
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:714110084624:security-group/sg-0432fe3ef161c6912",
            "description": "Allow ssh",
            "egress": [],
            "id": "sg-0432fe3ef161c6912",
            "ingress": [],
            "name": "agentsgUGkPN",
            "name_prefix": "",
            "owner_id": "714110084624",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba22efc58b2e5871"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.random_string.random_str"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group_egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1245816490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0432fe3ef161c6912",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.security_group",
            "module.ec2_security_group.random_string.random_str"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group_ingress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2230885823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0432fe3ef161c6912",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.security_group",
            "module.ec2_security_group.random_string.random_str"
          ]
        }
      ]
    }
  ]
}